client/src/index.css
@tailwind base;
@tailwind components;
@tailwind utilities;

html {
  scroll-behavior: smooth;
}

@layer base {
  main {
    @apply p-2 w-full h-full
  }

}

body {
  font-family: 'Sentient', serif;
}

nav {
  height: 100dvh;
}

.sidebar-background {
  backdrop-filter: blur(25px) saturate(180%);
  -webkit-backdrop-filter: blur(25px) saturate(180%);
  background-color: rgba(10, 21, 22, 0.74);
}

::-webkit-scrollbar {
  width: 5px; 
}

::-webkit-scrollbar-track {
  background-color: #01211e;
  width: 5px;
}

::-webkit-scrollbar-thumb {
  background: #4e4e4e;
  border-radius: 25px;
}

